PartyPalace/force-app/main/default/objects/Delivery__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks to see if it has been delivered</description>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>