PartyPalace/force-app/main/default/objects/Delivery__c/fields/Installer__c.field-meta.xml
<CustomField>
    <fullName>Installer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer</label>
    <referenceTo>Installer__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>